# fm-dlp

./: .gitignore  README.md  fm-dlp.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pypi.yml
fm_dlp/: __init__.py  __main__.py  cli.py
fm_dlp/commands/: download.py  search.py  update.py
fm_dlp/utils/: colors.py  config.py  configer.py  functions.py  validate.py  validator.py
modules/: __main__.py  add_metadata.py  cli.py  colors.py  configer.py  download.py  downloader.py  handlers.py  help.py  helper.py  parser.py  search.py  searching.py  update.py
modules/commands/: download.py  search.py
modules/utils/: colors.py  configer.py  update.py  validator.py
