[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fm-dlp"
version = "3.8.1"
description = "CLI tool for searching YouTube/YTMusic and downloading audio/video from 1000+ platforms"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Fkernel653"}
]
keywords = [
    "cli",
    "audio",
    "video",
    "youtube",
    "ytmusic",
    "youtube-music",
    "yt-dlp",
    "downloader"
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

dependencies = [
    "yt-dlp",
    "ytmusicapi",
    "mutagen",
    "platformdirs",
    "color-kiss",
    "cliss",
]

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/Fkernel653/fm-dlp"
Repository = "https://github.com/Fkernel653/fm-dlp.git"
Documentation = "https://github.com/Fkernel653/fm-dlp#readme"

[project.scripts]
fm-dlp = "fm_dlp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fm_dlp"]

[tool.hatch.build.targets.wheel.force-include]
"fm_dlp" = "*.json"
